# Lunfardo

./: .gitignore  README.md  grammar.txt  hello.py  pyproject.toml  requirements.txt
src/: basic.py  context.py  context_typed.py  errors.py  example.lunf  factorial.lunf  fibonacci.lunf  interpreter.py  lexer.py  library_registry.py  lunfardo.py  lunfardo_parser.py  lunfardo_token.py  nodes.py  rtresult.py  run.py  symbol_table.py  tokens.py
src/builtin/: gualichos.lunf  lacompu.lunf
src/builtin/lib/: gualichos.py  lacompu.py
src/constants/: __init__.py  builtins.py  colors.py  keywords.py  letters_digits.py  tokens.py
src/errors/: __init__.py  error_markings.py  errors.py
src/examples/: animal.lunf  banco.lunf  banco_oop.lunf  bardos.lunf  chetos1.lunf  example.lunf  factorial.lunf  fibonacci.lunf  gualichos_calculadora.lunf  gualichos_ejemplo.lunf  lacompu_ejemplo.lunf  perro.lunf
src/lunfardo_types/: __init__.py  boloodean.py  boolean.py  chamuyo.py  cheto.py  coso.py  function.py  laburo.py  list.py  mataburros.py  nada.py  number.py  numero.py  string.py  value.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py  utils.py
